hphp/test/slow/hack_mode/2204.php.expectf
HipHop Fatal error: syntax error, unexpected T_HH_ERROR, expecting $end in %s/hphp/test/slow/hack_mode/2204.php on line 2
